--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@
 
 DATABASE_URL="postgresql://postgres:kennedy@localhost:5432/realtor-app?schema=public"
 JWT_SECRET="LetThisBeTheSecret"
+EXPIRESIN='3600000'
