--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.1.0",
+    "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.15.0",
     "@types/jsonwebtoken": "^9.0.2",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.22",
+    "passport-jwt": "^4.0.1",
     "prisma": "^4.15.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
