--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.22",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "prisma": "^4.15.0",
     "reflect-metadata": "^0.1.13",
