--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@
 DATABASE_URL="postgresql://postgres:kennedy@localhost:5432/realtor-app?schema=public"
 JWT_SECRET="LetThisBeTheSecret"
 EXPIRESIN='3600000'
+PRODUCT_SECRET_KEY="hjibchchch-dhbhckhchf-nhcbkcj"
